--- a/Checkers/Checkers/Checkers.vcxproj
+++ b/Checkers/Checkers/Checkers.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B12702AD-ABFB-343A-A199-8E24837244A3}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
+    <WindowsTargetPlatformVersion>10.0.10586.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -36,7 +37,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_UITOOLS_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_CORE_LIB;QT_GUI_LIB;QT_UITOOLS_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtUiTools;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -53,7 +54,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_UITOOLS_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>UNICODE;_UNICODE;WIN32;WIN64;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_UITOOLS_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtUiTools;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat />
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -68,9 +69,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BoardDisplay.cpp" />
-    <ClCompile Include="checkers.cpp" />
-    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\BlackMovementGenerator.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Board.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\BoardDisplay.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Game.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\GameManager.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\JumpMovement.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\main.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\MovementGenerator.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Player.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\RedMovementGenerator.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\RegularMovement.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Tile.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_BoardDisplay.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -83,24 +93,6 @@
     <ClCompile Include="GeneratedFiles\Release\moc_BoardDisplay.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Tile.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="GameManager.h">
-      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      </Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      </Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      </Command>
-      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </Message>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      </Command>
-    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Checkers.ui">
@@ -115,18 +107,27 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="checkers.hpp" />
-    <ClInclude Include="TileDisplay.h" />
-    <CustomBuild Include="BoardDisplay.h">
+    <CustomBuild Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\BoardDisplay.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing BoardDisplay.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -D_UNICODE -DWIN32 -DWIN64 -DQT_DLL -DQT_CORE_LIB -DQT_GUI_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtUiTools" "-I$(QTDIR)\include\QtWidgets"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -D_UNICODE -DWIN32 -DWIN64 -DQT_CORE_LIB -DQT_GUI_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtUiTools" "-I$(QTDIR)\include\QtWidgets"</Command>
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Moc%27ing BoardDisplay.h...</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</Outputs>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -D_UNICODE -DWIN32 -DWIN64 -DQT_DLL -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtUiTools" "-I$(QTDIR)\include\QtWidgets"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -D_UNICODE -DWIN32 -DWIN64 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_GUI_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)\." "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtUiTools" "-I$(QTDIR)\include\QtWidgets"</Command>
     </CustomBuild>
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\BlackMovementGenerator.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Board.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Game.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\GameManager.h" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\JumpMovement.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Movement.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\MovementGenerator.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\Player.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\RedMovementGenerator.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\RegularMovement.hpp" />
+    <ClInclude Include="..\..\..\..\..\..\..\..\Frank%27s Laptop\Desktop\Programming\School\CS405-Intro-to-AI\CS405Checkers\Checkers\Checkers\TileDisplay.h" />
     <ClInclude Include="GeneratedFiles\ui_Checkers.h" />
   </ItemGroup>
   <ItemGroup>
@@ -146,7 +147,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties MocDir=".\GeneratedFiles\$(ConfigurationName)" UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="" lupdateOnBuild="0" lreleaseOptions="" Qt5Version_x0020_x64="5.10.0" MocOptions="" />
+      <UserProperties MocDir=".\GeneratedFiles\$(ConfigurationName)" UicDir=".\GeneratedFiles" RccDir=".\GeneratedFiles" lupdateOptions="" lupdateOnBuild="0" lreleaseOptions="" Qt5Version_x0020_x64="msvc2017_64" MocOptions="" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
